--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".MiCuenta">
-
-        </activity>
+        <activity android:name=".EditarPerfil"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".MiCuenta"></activity>
         <activity android:name=".LogInActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
