screen de producto 100% maquetada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditarPerfil"></activity>
+        <activity android:name=".Producto"></activity>
+        <activity android:name=".EditarPerfil" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MiCuenta"></activity>
+        <activity android:name=".MiCuenta" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
