--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         <activity android:name=".EditarPerfil" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MiCuenta" />
+        <activity android:name=".RecuperarCuentaActivity" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
