--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Producto"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".Producto" />
         <activity android:name=".EditarPerfil" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MiCuenta" />
         <activity android:name=".RecuperarCuentaActivity" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
