--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".clubActivity"></activity>
+        <activity android:name=".BeneficiosActivity"></activity>
+        <activity android:name=".clubActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".Producto" />
         <activity android:name=".EditarPerfil" />
