--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BeneficiosActivity"></activity>
-        <activity android:name=".CuponesActivity" />
-        <activity android:name=".HistorialActivity" />
-        <activity android:name=".ScannerActivity" />
+        <activity android:name=".activities.BeneficiosActivity"></activity>
+        <activity android:name=".activities.CuponesActivity" />
+        <activity android:name=".activities.HistorialActivity" />
+        <activity android:name=".activities.ScannerActivity" />
         <activity
             android:name=".activities.ProductMenu"
             android:label="@string/title_activity_product_menu"
