--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,8 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.google.gms:google-services:4.2.0'
-        
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +19,8 @@ allprojects {
         maven { url 'https://jitpack.io' }
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
         
     }
 }
